--- a/app/views/home/genre.html.erb
+++ b/app/views/home/genre.html.erb
@@ -10,7 +10,10 @@
       <div class="swiper" id="swiper<%= index %>">
         <ul class="swiper-wrapper swipes">
           <% g.events.order("RANDOM()").limit(6).each do |event| %>
-          <li class="swiper-slide" alt=""><img src="assets/catmovie.png"><%= event.event_title %><%= event.user.name %></li>
+          <li class="swiper-slide" alt=""><img src="assets/catmovie.png">
+          <%= link_to event.event_title , "/events/#{event.id}" %>
+          
+          <%= event.event_title %><%= event.user.name %></li>
           <% end %>
         </ul>
       </div>
