--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,54 @@
-<div class="genre-top-section">
-  <%= @event.event_title %>
+<% provide(:title, "EventPage:edit") %>
+
+  <%= form_for(@event, url:{controller: 'events',action: 'update', id: @event.id}) do |f| %>
+<div class="event-top-section">
+  <div class="event-content-left">
+      <% @event.errors.full_messages.each do |message| %>
+      <p class="edit-error">
+      <%= message %>
+      </p>
+      <% end %>
+      <div class="event-title">
+        <%= f.text_field(:event_title,class:"event-title-form", size:"50") %>
+        
+      </div>
+      <div class="event-text">
+        <% if @event.content.nil? %>
+          <%= f.text_area(:content, class: "event-content-text", placeholder: "イベント内容", size:"50x13") %>
+        <% else %>
+          <%= f.text_area(:content, class: "event-content-text", placeholder: :content, size:"50x13") %>
+        <% end %>
+       
+      </div>
+      <div>
+      </div>
+  </div>
+
+  <div class="event-content-right">
+    <span>イベント画像</span>
+    <div class="event-thumbnail">
+      <div class="event-edit-image">
+        <% if @event.event_image_name.size == 0 %>
+          <%= image_tag "/assets/catman" %>
+        <% else %>
+          <%= image_tag @event.event_image_name.url %>
+        <% end %>
+      </div>
+      
+    </div>
+
+    
+  
+    <%= f.file_field :event_image_name %>
+   
+
+    <%= link_to eventpage_path do %>
+      <button class="btn-back">戻る</button>
+    <% end %>
+
+    <button class="btn-edit" type="submit">更新</button>
+  </div>
 </div>
-<%= link_to eventpage_path do %>
-  <button class="follow_viewer" style="background-color:green;">戻る</button>
-<% end %>
+    <% end %>
+
+
