--- a/app/views/users/show_our.html.erb
+++ b/app/views/users/show_our.html.erb
@@ -13,7 +13,7 @@
     <p><%= @user.name %></p>
     <div>
       <p>フォロー数: <%= @user.followings.count %> フォロワー数: <%= @user.followers.count %></p>
-      <%= link_to mypage_path do %>
+      <%= link_to mypage_path,"data-turbolinks": false do %>
         <button class="follow_viewer" style="background-color:green;">戻る</button>
       <% end %>
     </div>
